styles/style.css
:root {
  --branding-color: #63b4ff;
  --secondary-color: #e8f6ff;
  --heading-font-family: "Playfair Display", serif;
  --default-font-family: "Poppins", sans-serif;
}

body {
  font-family: var(--default-font-family);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: black;
  font-family: var(--heading-font-family);
  font-weight: bold;
}

h1 {
  font-size: 90px;
  line-height: 1.5;
}

h2 {
  font-size: 64px;
}

h4 {
  size: 40px;
}

p {
  font-weight: normal;
  font-size: 16px;
  line-height: 30px;
}

.content {
  margin: 30px;
}

.content h1 {
  font-size: 64px;
  line-height: 80px;
  margin-bottom: 15px;
}

.content h2 {
  font-size: 18px;
  font-family: var(--default-font-family);
}

.content h3 {
  font-size: 24px;
  font-family: var(--default-font-family);
  line-height: 1.5;
  margin: 20px 0 0;
  text-align: center;
}

.content-container {
  padding: 100px 20px;
}

.content-container p {
  font-size: 14px;
  font-family: var(--default-font-family);
  text-align: center;
}

.hero {
  background: url('../img/background.jpg');
  background-size: 100% 100%;
  text-align: center;
  padding: 160px 20px;
}

.hero p {
  font-size: 36px;
  font-weight: bold;
  margin: 0;
  color: #272142;
}

.hero h1 {
  font-size: 64px;
  line-height: 80px;
  margin-bottom: 15px;
  color: white;
}

.hero h2 {
  font-family: var(--heading-font-family);
  font-weight: normal;
  line-height: 1.5;
  font-size: 24px;
  color: white;
}

.btn-branding {
  background: var(--branding-color);
  border-radius: 4px;
  color: white;
  font-size: 18px;
  line-height: 27px;
  padding: 15px 30px;
}

.btn-branding-secondary {
  background: var(--secondary-color);
  border-radius: 4px;
  color: var(--branding-color);
  font-size: 18px;
  line-height: 27px;
  padding: 15px 30px;
}

.btn-branding-outline {
  color: var(--branding-color);
  border: 1px solid var(--branding-color);
  border-radius: 4px;
  font-size: 18px;
  line-height: 27px;
  padding: 15px 30px;
}

.project-desciption {
  padding: 120px 60px;
}

#niunia-basic {
  border-radius: 20px;
  max-width: 400px;
}
#home-pic-1,
#home-pic-2,
#home-pic-3 {
  border-radius: 10px;
  max-width: 400px;
}

#blog-pic,
#products-pic {
  border-radius: 15px;
  display: flex;
  max-width: 500px;
}

#snow {
  border-radius: 18px;
  max-width: 500px;
}

nav {
  padding: 20px 0;
}

nav ul {
  margin: 0;
  padding: 0;
}

nav li,
#logo {
  display: inline;
  list-style: none;
  line-height: 56px;
  margin-left: 15px;
}

nav a {
  text-decoration: none;
  color: #272142;
  transition: all 110ms ease-in-out;
}

nav a:hover {
  color: var(--branding-color);
}

footer {
  margin: 60px 0;
}

footer .contact-box {
  background: var(--secondary-color);
  padding: 30px 120px;
  border-radius: 10px;
}

footer .contact-box p {
  margin: 0;
}
footer .email-link {
  text-decoration: none;
  color: black;
  font-size: 24px;
  text-align: center;
}
footer .email-link:hover {
  color: var(--branding-color);
}

footer .social-links a {
  margin: 0, 20px;
  color: var(--branding-color);
  background-color: (--secondary-color);
  padding: 10px 18px;
  font-size: 24px;
  transition: 150ms ease-in-out;
  border-radius: 50%;
}

footer .social-links a:hover {
  color: white;
  background: var(--branding-color);
}
.signature {
  font-size: 12px;
  text-align: center;
  margin-bottom: 40px;
}
.signature a {
  text-decoration: none;
  color: black;
}
.signature a:hover {
  text-decoration: none;
  color: var(--branding-color);
}

@media (max-width: 900px) {
  h1 {
    font-size: 40px;
    line-height: 2;
  }

  h2 {
    font-size: 35px;
  }

  .hero {
    padding: 80px 20px;
  }

  .project-desciption {
    padding: 0;
    text-align: center;
  }

  .about-section {
    text-align: center;
    padding: 0;
  }
  .about-paragraph {
    text-align: center;
    padding: 0;
    margin: 0;
  }
  .content-container {
    padding: 20px 20px;
  }

  #niunia-basic,
  #snow {
    max-width: 350px;
  }
  #blog-pic,
  #products-pic {
    max-width: 250px;
  }
}

